--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                 position:relative;
                 top:-100px;
                 text-align: center;
+                font-size: 1.5em;
             }
             #weather-desc {
                 font-size: 30px;
@@ -61,6 +62,13 @@
             .t {
                 color: #30FFD6;
                 display: inline-block;
+            }
+            .such, #all-weather {
+                text-shadow:
+                  -1px -1px 0 #000,  
+                  1px -1px 0 #000,
+                  -1px 1px 0 #000,
+                  1px 1px 0 #000;
             }
             .suchlikes {
                 display:block;
